--- a/index.html
+++ b/index.html
@@ -5,7 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+<header>
+<h1>BARBEARIAVINTAGE</h1>
+
+<ul>
+    <li>HORARIO DE ATENDIMENTO</li>
+    <li>MEUS PRODUTOS</li>
+    <li>SAIBA MAIS</li>
+</ul>
+</header>
+
 <body>
-    
+    <p class = "paragrafo-1">Localizada no coração da cidade a BarbeariaVintage traz o que há de melhor para seu cabelo e barba</p>
+    <p class = "paragrafo-1">Fundada em 2019, a BarbeariaVintage  já é destaque na cidade e conquista
+        novos clientes a cada dia pelo custo-benefício dos serviços prestados.</p>
+    <p class = "paragrafo-1">Nossa missão é: "Proporcionar auto-estima e qualidade de vida aos clientes.</p>
+    <p class = "paragrafo-1">Oferecemos profissionais experientes e antenados às mudanças no mundo
+da moda. O atendimento possui padrão de excelência e agilidade,
+garantindo qualidade e satisfação dos nossos clientes.</p>
+
+  <h2 class = "subtitulo-1">BENEFÍCIOS</h2>
+
+ <ul class = "listas">
+    <li>Atendimento especializado</li>
+    <li>Espaço diferenciado</li>
+    <li>Clientes satisfeitos</li>
+ </ul>
+
+    <img class = "imagem-2" src ="beneficios (1).jpg" alt="imagem beneficios">
+
+
+    <footer>
+        <p>Para mais informações acesse os contatos abaixo</p>
+        <p>@barbeariavintage</p>
+        <p>(42) 99123-9834</p>
+    </footer>
 </body>
 </html>
